...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/titleResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/paper"
...
